@@ -5,82 +5,79 @@ import com.tankboy.highknowledgeapi.domain.post.domain.repository.PostRepository
 import com.tankboy.highknowledgeapi.domain.post.presentation.dto.request.CreatePostRequest;
 import com.tankboy.highknowledgeapi.domain.post.presentation.dto.request.UpdatePostRequest;
 import com.tankboy.highknowledgeapi.domain.post.presentation.dto.response.PostResponse;
+import com.tankboy.highknowledgeapi.domain.user.domain.entity.UserEntity;
+import com.tankboy.highknowledgeapi.domain.user.domain.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PostService {
 
     private final PostRepository postRepository;
+    private final UserRepository userRepository;
 
     @Transactional
-    public PostResponse createPost(CreatePostRequest request) {
+    public PostResponse create(CreatePostRequest request) {
+        String username = (String)
+                SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+
+        UserEntity userEntity = userRepository.findByName(username)
+                .orElseThrow(() -> new IllegalArgumentException("User not found with name: " + username));
+
         PostEntity post = PostEntity.builder()
+                .authorUserId(userEntity.getId())
                 .title(request.title())
-                .timeDate(request.timeDate())
                 .content(request.content())
-                .password(request.password())
                 .build();
-        PostEntity savedPost = postRepository.save(post);
-        return new PostResponse(
-                savedPost.getId(),
-                savedPost.getTitle(),
-                savedPost.getTimeDate(),
-                savedPost.getContent()
-        );
+        postRepository.save(post);
+
+        return PostResponse.of(post);
     }
 
-    public PostResponse getPost(Long id) {
+    public PostResponse findById(Long id) {
         PostEntity post = postRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Post not found with id: " + id));
-        return new PostResponse(
-                post.getId(),
-                post.getTitle(),
-                post.getTimeDate(),
-                post.getContent()
-        );
+        return PostResponse.of(post);
     }
 
-    public List<PostResponse> getAllPosts() {
-        return postRepository.findAll().stream()
-                .map(post -> new PostResponse(
-                        post.getId(),
-                        post.getTitle(),
-                        post.getTimeDate(),
-                        post.getContent()
-                ))
-                .collect(Collectors.toList());
+    public List<PostResponse> findAll() {
+        return postRepository.findAll()
+                .stream()
+                .map(PostResponse::of)
+                .toList();
     }
 
     @Transactional
-    public PostResponse updatePost(Long id, UpdatePostRequest request) {
+    public PostResponse update(Long id, UpdatePostRequest request) {
         PostEntity post = postRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Post not found with id: " + id));
-        post.update(request.title(), request.timeDate(), request.content(), request.password());
-        return new PostResponse(
-                post.getId(),
-                post.getTitle(),
-                post.getTimeDate(),
-                post.getContent()
-        );
+
+        post.setContent(request.content());
+        return PostResponse.of(post);
     }
 
     @Transactional
-    public PostResponse deletePost(Long id) {
+    public PostResponse delete(Long id) {
         PostEntity post = postRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Post not found with id: " + id));
+
+        String username = (String)
+                SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+
+        UserEntity userEntity = userRepository.findByName(username)
+                .orElseThrow(() -> new IllegalArgumentException("User not found with name: " + username));
+
+        if (post.getAuthorUserId() != userEntity.getId()) {
+            throw new IllegalArgumentException("You are not authorized to delete this post.");
+        }
+
         postRepository.delete(post);
-        return new PostResponse(
-                post.getId(),
-                post.getTitle(),
-                post.getTimeDate(),
-                post.getContent()
-        );
+        return PostResponse.of(post);
     }
 
 }
